--- a/rootdir/init.samsungjanice.rc
+++ b/rootdir/init.samsungjanice.rc
@@ -427,36 +427,6 @@ on boot
 
     # temp Torch workaround
     chmod 0222 /sys/class/sec/flash/enable
-
-    # system permissions for device parts
-    chown system system /sys/block/mmcblk0/queue/read_ahead_kb
-    chown system system /sys/devices/system/cpu/sched_mc_power_savings
-    chown system system /sys/kernel/abb-charger/charger_curr
-    chown system system /sys/kernel/abb-codec/anagain3
-    chown system system /sys/kernel/abb-codec/hsrdiggain
-    chown system system /sys/kernel/abb-codec/hsldiggain
-    chown system system /sys/kernel/abb-codec/hslowpow
-    chown system system /sys/kernel/abb-codec/hsdaclowpow
-    chown system system /sys/kernel/abb-codec/hshpen
-    chown system system /sys/kernel/abb-codec/classdhpg
-    chown system system /sys/kernel/abb-codec/classdwg
-    chown system system /sys/kernel/abb-codec/addiggain2
-    chown system system /sys/kernel/abb-codec/eardiggain
-    chown system system /sys/kernel/abb-regu/VOTG
-    chown system system /sys/kernel/mxt224e/sweep2wake
-    chown system system /sys/kernel/debug/cpuidle/deepest_state
-    chown system system /sys/kernel/fsync/mode
-    chown system system /sys/kernel/mali/mali_gpu_clock
-    chown system system /sys/kernel/mali/mali_auto_boost
-    chown system system /sys/module/mmc_core/parameters/use_spi_crc
-    chown system system /sys/module/dhd/parameters/dhdpm_fast
-    chown system system /sys/kernel/mxt224e/threshold_t48
-    chown system system /sys/devices/pri_lcd_s6e63m0.0/filter_R
-    chown system system /sys/devices/pri_lcd_s6e63m0.0/filter_G
-    chown system system /sys/devices/pri_lcd_s6e63m0.0/filter_B
-    chown system system /sys/module/mali/parameters/mali_l2_max_reads
-    chown system system /sys/module/mali/parameters/pre_allocated_memory_size_max
-    write /sys/kernel/mxt224e/threshold_t48 on
     
 
  # Define TCP buffer sizes for various networks
@@ -643,3 +613,34 @@ service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard0
 service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
     class late_start
     disabled
+
+    # system permissions for device parts
+    on property:sys.boot_completed=1 
+    chown system system /sys/block/mmcblk0/queue/read_ahead_kb
+    chown system system /sys/devices/system/cpu/sched_mc_power_savings
+    chown system system /sys/kernel/abb-charger/charger_curr
+    chown system system /sys/kernel/abb-codec/anagain3
+    chown system system /sys/kernel/abb-codec/hsrdiggain
+    chown system system /sys/kernel/abb-codec/hsldiggain
+    chown system system /sys/kernel/abb-codec/hslowpow
+    chown system system /sys/kernel/abb-codec/hsdaclowpow
+    chown system system /sys/kernel/abb-codec/hshpen
+    chown system system /sys/kernel/abb-codec/classdhpg
+    chown system system /sys/kernel/abb-codec/classdwg
+    chown system system /sys/kernel/abb-codec/addiggain2
+    chown system system /sys/kernel/abb-codec/eardiggain
+    chown system system /sys/kernel/abb-regu/VOTG
+    chown system system /sys/kernel/mxt224e/sweep2wake
+    chown system system /sys/kernel/debug/cpuidle/deepest_state
+    chown system system /sys/kernel/fsync/mode
+    chown system system /sys/kernel/mali/mali_gpu_clock
+    chown system system /sys/kernel/mali/mali_auto_boost
+    chown system system /sys/module/mmc_core/parameters/use_spi_crc
+    chown system system /sys/module/dhd/parameters/dhdpm_fast
+    chown system system /sys/kernel/mxt224e/threshold_t48
+    chown system system /sys/devices/pri_lcd_s6e63m0.0/filter_R
+    chown system system /sys/devices/pri_lcd_s6e63m0.0/filter_G
+    chown system system /sys/devices/pri_lcd_s6e63m0.0/filter_B
+    chown system system /sys/module/mali/parameters/mali_l2_max_reads
+    chown system system /sys/module/mali/parameters/pre_allocated_memory_size_max
+    write /sys/kernel/mxt224e/threshold_t48 on
