--- a/rootdir/init.samsungjanice.rc
+++ b/rootdir/init.samsungjanice.rc
@@ -435,6 +435,13 @@ on boot
     chown system system /sys/kernel/abb-codec/anagain3
     chown system system /sys/kernel/abb-codec/hsrdiggain
     chown system system /sys/kernel/abb-codec/hsldiggain
+    chown system system /sys/kernel/abb-codec/hslowpow
+    chown system system /sys/kernel/abb-codec/hsdaclowpow
+    chown system system /sys/kernel/abb-codec/hshpen
+    chown system system /sys/kernel/abb-codec/classdhpg
+    chown system system /sys/kernel/abb-codec/classdwg
+    chown system system /sys/kernel/abb-codec/addiggain2
+    chown system system /sys/kernel/abb-codec/eardiggain
     chown system system /sys/kernel/abb-regu/VOTG
     chown system system /sys/kernel/mxt224e/sweep2wake
     chown system system /sys/kernel/debug/cpuidle/deepest_state
