--- a/rootdir/init.samsungjanice.rc
+++ b/rootdir/init.samsungjanice.rc
@@ -619,6 +619,8 @@ service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1
     chown system system /sys/block/mmcblk0/queue/read_ahead_kb
     chown system system /sys/devices/system/cpu/sched_mc_power_savings
     chown system system /sys/kernel/abb-charger/charger_curr
+    chown system system /sys/kernel/abb-chargalg/eoc_first
+    chown system system /sys/kernel/abb-chargalg/eoc_real
     chown system system /sys/kernel/abb-codec/anagain3
     chown system system /sys/kernel/abb-codec/hsrdiggain
     chown system system /sys/kernel/abb-codec/hsldiggain
@@ -635,6 +637,7 @@ service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1
     chown system system /sys/kernel/fsync/mode
     chown system system /sys/kernel/mali/mali_gpu_clock
     chown system system /sys/kernel/mali/mali_auto_boost
+    chown system system /sys/kernel/mali/mali_gpu_fullspeed
     chown system system /sys/module/mmc_core/parameters/use_spi_crc
     chown system system /sys/module/dhd/parameters/dhdpm_fast
     chown system system /sys/kernel/mxt224e/threshold_t48
