init: Add missing permissions

--- a/rootdir/init.samsungjanice.rc
+++ b/rootdir/init.samsungjanice.rc
@@ -635,6 +635,16 @@ service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1
     chown system system /sys/kernel/mxt224e/sweep2wake
     chown system system /sys/kernel/debug/cpuidle/deepest_state
     chown system system /sys/kernel/fsync/mode
+    chown system system /sys/kernel/liveopp/arm_step0
+    chown system system /sys/kernel/liveopp/arm_step1
+    chown system system /sys/kernel/liveopp/arm_step2
+    chown system system /sys/kernel/liveopp/arm_step3
+    chown system system /sys/kernel/liveopp/arm_step4
+    chown system system /sys/kernel/liveopp/arm_step5
+    chown system system /sys/kernel/liveopp/arm_step6
+    chown system system /sys/kernel/liveopp/arm_step7
+    chown system system /sys/kernel/liveopp/arm_step8
+    chown system system /sys/kernel/liveopp/arm_step9
     chown system system /sys/kernel/mali/mali_gpu_clock
     chown system system /sys/kernel/mali/mali_auto_boost
     chown system system /sys/kernel/mali/mali_gpu_fullspeed
